--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,3 +2,4 @@ set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 set-option -sg escape-time 10
 set-option -g focus-events on
+set -g mouse on
