--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,28 @@
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+
+set -g status-bg black
+set -g status-fg white
+
 set-option -sg escape-time 10
 set-option -g focus-events on
 set -g mouse on
+
+# statusbar
+set -g status-position bottom
+set -g status-justify left
+#set -g status-style 'bg=colour18 fg=colour137 dim'
+set -g status-left ''
+#set -g status-right '#[fg=colour233,bg=colour19] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+#setw -g window-status-current-style 'fg=colour1 bg=colour19 bold'
+#setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+
+# setw -g window-status-style 'fg=colour9 bg=colour18'
+# setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+# setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+
+
