--- a/ansible/tools.yml
+++ b/ansible/tools.yml
@@ -5,6 +5,7 @@
   become: true
   vars:
     packages:
+      - apt-transport-https
       - bash
       - build-essential
       - curl
@@ -27,6 +28,9 @@
       - wget
       - zsh
 
+    packagesWithDependencies:
+      - brave-browser-nightly
+
   pre_tasks:
   - name: Update apt cache
     apt:
@@ -42,3 +46,14 @@
       name: "{{ item }}"
       state: latest
     loop: "{{ packages }}"
+  - name: Add brave browser sources
+    become: true
+    shell: |
+      sudo curl -fsSLo /usr/share/keyrings/brave-browser-nightly-archive-keyring.gpg https://brave-browser-apt-nightly.s3.brave.com/brave-browser-nightly-archive-keyring.gpg
+      echo "deb [signed-by=/usr/share/keyrings/brave-browser-nightly-archive-keyring.gpg arch=amd64] https://brave-browser-apt-nightly.s3.brave.com/ stable main"|sudo tee /etc/apt/sources.list.d/brave-browser-nightly.list
+  - name: Install packages with dependencies
+    apt:
+      name: "{{ item }}"
+      state: latest
+    loop: "{{ packagesWithDependencies }}"
+
