--- a/ansible/tools.yml
+++ b/ansible/tools.yml
@@ -28,6 +28,7 @@
       - unzip
       - vim
       - wget
+      - zlib1g-dev
       - zsh
 
     packagesWithDependencies:
@@ -51,8 +52,12 @@
   - name: Add brave browser sources
     become: true
     shell: |
-      sudo curl -fsSLo /usr/share/keyrings/brave-browser-nightly-archive-keyring.gpg https://brave-browser-apt-nightly.s3.brave.com/brave-browser-nightly-archive-keyring.gpg
-      echo "deb [signed-by=/usr/share/keyrings/brave-browser-nightly-archive-keyring.gpg arch=amd64] https://brave-browser-apt-nightly.s3.brave.com/ stable main"|sudo tee /etc/apt/sources.list.d/brave-browser-nightly.list
+      curl -fsSLo /usr/share/keyrings/brave-browser-nightly-archive-keyring.gpg https://brave-browser-apt-nightly.s3.brave.com/brave-browser-nightly-archive-keyring.gpg
+      echo "deb [signed-by=/usr/share/keyrings/brave-browser-nightly-archive-keyring.gpg arch=amd64] https://brave-browser-apt-nightly.s3.brave.com/ stable main"| tee /etc/apt/sources.list.d/brave-browser-nightly.list
+    become: true
+  - name: Update apt cache
+    apt:
+      update_cache: true
   - name: Install packages with dependencies
     apt:
       name: "{{ item }}"
