--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ undo/
 .zcompdump*
 fonts/in/
 fonts/*.zip
+/zsh/.config/local/share/zsh/zcompdump*
+/z/.config/local/share/z/z
+/fonts/.local/share/fonts/.uuid
