--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,17 +12,18 @@ set -g mouse on
 set -g status-position bottom
 set -g status-justify left
 #set -g status-style 'bg=colour18 fg=colour137 dim'
-set -g status-left ''
-#set -g status-right '#[fg=colour233,bg=colour19] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
+set -g status-right '#(date "+%%a %%d/%%m %%H:%%M")'
+#set -g status-right '#%H:%M '
 set -g status-right-length 50
 set -g status-left-length 20
 
-#setw -g window-status-current-style 'fg=colour1 bg=colour19 bold'
-#setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
 
-# setw -g window-status-style 'fg=colour9 bg=colour18'
-# setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+setw -g window-status-format '#I:#W'
 
-# setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+setw -g window-status-current-style 'fg=colour250'
+# setw -g window-status-style 'fg=colour233 bg=colour8'
+setw -g window-status-current-format '#I:#W'
+
+setw -g window-status-separator ' | '
 
 
