--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,22 +8,16 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 set -g mouse on
 
-# statusbar
+# Status bar
 set -g status-position bottom
 set -g status-justify left
-#set -g status-style 'bg=colour18 fg=colour137 dim'
 set -g status-right '#(date "+%%a %%d/%%m %%H:%%M")'
-#set -g status-right '#%H:%M '
 set -g status-right-length 50
 set -g status-left-length 20
-
+set -g status-left '#S - '
 
 setw -g window-status-format '#I:#W'
-
 setw -g window-status-current-style 'fg=colour250'
-# setw -g window-status-style 'fg=colour233 bg=colour8'
 setw -g window-status-current-format '#I:#W'
-
 setw -g window-status-separator ' | '
-
 
