--- a/conf/.gitconfig
+++ b/conf/.gitconfig
@@ -9,3 +9,7 @@
 
 [alias]
     undo = reset --soft @~1
+[mergetool "fugitive"]
+	cmd = nvim -f -c \"Gvdiffsplit!\" \"$MERGED\"
+[merge]
+	tool = fugitive
