Tmux clipboard etc

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,6 @@
+# Colors
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 set -ga terminal-overrides ",*256col*:Tc"
 
 set -g status-bg black
@@ -6,6 +8,8 @@ set -g status-fg white
 
 set-option -sg escape-time 10
 set-option -g focus-events on
+set -g history-limit 50000
+set -g display-time 4000
 set -g mouse on
 
 # Status bar
@@ -17,7 +21,27 @@ set -g status-left-length 20
 set -g status-left '#S - '
 
 setw -g window-status-format '#I:#W'
-setw -g window-status-current-style 'fg=colour250'
+setw -g window-status-style 'fg=colour249'
+
 setw -g window-status-current-format '#I:#W'
+setw -g window-status-current-style 'fg=colour255'
+
 setw -g window-status-separator ' | '
 
+# Easier and faster switching between next/prev window
+bind C-p previous-window
+bind C-n next-window
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Resurrect
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-processes 'ssh'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
