hjkl navigation for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,9 +28,20 @@ setw -g window-status-current-style 'fg=colour255'
 
 setw -g window-status-separator ' | '
 
+# Pane navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # Easier and faster switching between next/prev window
 bind C-p previous-window
 bind C-n next-window
+
+# Copy paste
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
+bind P paste-buffer
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
