Add common workspace shortcuts

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,6 +38,14 @@ bind l select-pane -R
 bind C-p previous-window
 bind C-n next-window
 
+# Fast access to common projects
+## Personal
+bind-key -r J run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
+bind-key -r K run-shell "~/.local/bin/tmux-sessionizer ~/workspace/advent-of-code"
+## Work
+bind-key -r U run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka"
+bind-key -r I run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka-docker"
+
 # Copy paste
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
