--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,29 +38,20 @@ bind l select-pane -R
 bind C-p previous-window
 bind C-n next-window
 
-# Fast access to common projects
-## Personal
-bind-key -r J run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
-bind-key -r K run-shell "~/.local/bin/tmux-sessionizer ~/workspace/advent-of-code"
-## Work
-bind-key -r U run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka"
-bind-key -r I run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka-docker"
-
-# Copy paste
-bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
-bind P paste-buffer
-
+#====================================== TPM ====================================
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-# Resurrect
-set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-processes 'ssh'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize tmux plugin manager
 run '~/.tmux/plugins/tpm/tpm'
+#===============================================================================
+
+# Personal projects
+bind-key -r J run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
+bind-key -r K run-shell "~/.local/bin/tmux-sessionizer ~/workspace/advent-of-code"
+
+# Work projects
+bind-key -r U run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka"
+bind-key -r I run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka-docker"
