Improve tmux shortcuts

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,6 +28,11 @@ setw -g window-status-current-style 'fg=colour255'
 
 setw -g window-status-separator ' | '
 
+# Prefix
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
 # Pane navigation
 bind h select-pane -L
 bind j select-pane -D
@@ -38,6 +43,14 @@ bind l select-pane -R
 bind C-p previous-window
 bind C-n next-window
 
+# Personal projects
+bind-key -r C-j run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
+bind-key -r C-k run-shell "~/.local/bin/tmux-sessionizer ~/workspace/advent-of-code"
+
+# Work projects
+bind-key -r C-u run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka"
+bind-key -r C-i run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka-docker"
+
 #====================================== TPM ====================================
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -47,11 +60,3 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # Initialize tmux plugin manager
 run '~/.tmux/plugins/tpm/tpm'
 #===============================================================================
-
-# Personal projects
-bind-key -r J run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
-bind-key -r K run-shell "~/.local/bin/tmux-sessionizer ~/workspace/advent-of-code"
-
-# Work projects
-bind-key -r U run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka"
-bind-key -r I run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka-docker"
