Add rust shortcut

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,10 @@ set -g history-limit 50000
 set -g display-time 4000
 set -g mouse on
 
+# Refresh $DISPLAY in all sessions (Sometimes resolves faulty connections to
+# Windows XServer)
+set-option -g update-environment " DISPAY"
+
 # Status bar
 set -g status-position bottom
 set -g status-justify left
@@ -46,6 +50,7 @@ bind C-n next-window
 # Personal projects
 bind-key -r C-j run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
 bind-key -r C-k run-shell "~/.local/bin/tmux-sessionizer ~/workspace/advent-of-code"
+bind-key -r C-l run-shell "~/.local/bin/tmux-sessionizer ~/workspace/rust"
 
 # Work projects
 bind-key -r C-u run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka"
