--- a/ansible/brave.yml
+++ b/ansible/brave.yml
@@ -3,16 +3,19 @@
 
   tasks:
     - name: Add brave browser sources
-      become: true
       shell: |
         curl -fsSLo /usr/share/keyrings/brave-browser-nightly-archive-keyring.gpg https://brave-browser-apt-nightly.s3.brave.com/brave-browser-nightly-archive-keyring.gpg
         echo "deb [signed-by=/usr/share/keyrings/brave-browser-nightly-archive-keyring.gpg arch=amd64] https://brave-browser-apt-nightly.s3.brave.com/ stable main"| tee /etc/apt/sources.list.d/brave-browser-nightly.list
       become: true
+      ignore_errors: true
     - name: Update apt cache
       apt:
         update_cache: true
+      ignore_errors: true
     - name: Install packages with dependencies
+      ignore_errors: yes
       apt:
         name: brave-browser-nightly
         state: latest
+      ignore_errors: true
 
