tmux: New Panes open in currend pwd

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -47,6 +47,11 @@ bind l select-pane -R
 bind C-p previous-window
 bind C-n next-window
 
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # Personal projects
 bind-key -r C-j run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
 bind-key -r C-k run-shell "~/.local/bin/tmux-sessionizer ~/workspace/advent-of-code"
