--- a/ansible/010_tools.yaml
+++ b/ansible/010_tools.yaml
@@ -15,24 +15,30 @@
       apt:
         pkg:
           - curl
+          - ca-certificates
           - gpg
         state: latest
         update_cache: true
       become: true
       ignore_errors: true
 
-    - name: Add brave key
-      shell: |
-        curl -fsSLo /usr/share/keyrings/brave-browser-archive-keyring.gpg https://brave-browser-apt-release.s3.brave.com/brave-browser-archive-keyring.gpg
-        echo "deb [arch=amd64 signed-by=/usr/share/keyrings/brave-browser-archive-keyring.gpg] https://brave-browser-apt-release.s3.brave.com/ stable main" | sudo tee /etc/apt/sources.list.d/brave-browser-release.list
-      become: true
-
     - name: Add regolith key
       shell: |
         curl -fsSL https://regolith-desktop.org/regolith.key | gpg --dearmor | sudo tee /usr/share/keyrings/regolith-archive-keyring.gpg > /dev/null
-        echo "deb [arch=amd64 signed-by=/usr/share/keyrings/regolith-archive-keyring.gpg] https://regolith-desktop.org/release-3_0-ubuntu-jammy-amd64 jammy main" | sudo tee /etc/apt/sources.list.d/regolith.list
+        echo "deb [arch=amd64 signed-by=/usr/share/keyrings/regolith-archive-keyring.gpg] https://regolith-desktop.org/release-3_0-ubuntu-$(. /etc/os-release && echo "$VERSION_CODENAME")-amd64 $(. /etc/os-release && echo "$VERSION_CODENAME") main" | sudo tee /etc/apt/sources.list.d/regolith.list
       become: true
 
+    - name: Add docker key
+      shell: |
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor | sudo tee /etc/apt/keyrings/docker.gpg > /dev/null
+        echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list
+      become: true
+
+    - name: Add brave key
+      shell: |
+        curl -fsSLo /usr/share/keyrings/brave-browser-archive-keyring.gpg https://brave-browser-apt-release.s3.brave.com/brave-browser-archive-keyring.gpg 
+        echo "deb [arch=amd64 signed-by=/usr/share/keyrings/brave-browser-archive-keyring.gpg] https://brave-browser-apt-release.s3.brave.com/ stable main" | sudo tee /etc/apt/sources.list.d/brave-browser-release.list
+      become: true
 
     - name: Install packages
       apt:
@@ -41,8 +47,13 @@
           - bash
           - brave-browser
           - build-essential
+          - containerd.io
           - dash
           - direnv
+          - docker-buildx-plugin
+          - docker-ce
+          - docker-ce-cli
+          - docker-compose-plugin
           - fd-find
           - fuse
           - fzf
@@ -102,4 +113,4 @@
     - name: Install rust
       shell: |
         curl https://sh.rustup.rs -sSf | sh -s -- -y
-        rm $HOME/.zshenv
+        rm $HOME/.zshenv 2&> /dev/null
