--- a/ansible/040_dotfiles.yaml
+++ b/ansible/040_dotfiles.yaml
@@ -1,8 +1,5 @@
 - name: Install Dotfiles
   hosts: 127.0.0.1
   tasks:
-    - name: Stow dotfiles
+    - name: Install dotfiles
       command: "{{ lookup('env', 'HOME') }}/.dotfiles/ubuntu"
-    - name: Change Shell
-      command: "chsh {{ lookup('env', 'USER') }} --shell /usr/bin/zsh"
-      become: true
