Better tmux highlighting

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,10 +25,11 @@ set -g status-left-length 20
 set -g status-left '#S - '
 
 setw -g window-status-format '#I:#W'
-setw -g window-status-style 'fg=colour249'
+# setw -g window-status-style 'fg=colour249'
 
 setw -g window-status-current-format '#I:#W'
-setw -g window-status-current-style 'fg=colour255'
+# setw -g window-status-current-style 'fg=colour255'
+set-option -g window-status-current-style bg=#aaaaaa,fg=#333333
 
 setw -g window-status-separator ' | '
 
@@ -54,12 +55,12 @@ bind % split-window -h -c "#{pane_current_path}"
 
 # Personal projects
 bind-key -r C-j run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
-bind-key -r C-k run-shell "~/.local/bin/tmux-sessionizer ~/workspace/advent-of-code"
-bind-key -r C-l run-shell "~/.local/bin/tmux-sessionizer ~/workspace/rust"
+# bind-key -r C-k run-shell "~/.local/bin/tmux-sessionizer ~/workspace/advent-of-code"
+# bind-key -r C-l run-shell "~/.local/bin/tmux-sessionizer ~/workspace/rust"
 
 # Work projects
-bind-key -r C-u run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka"
-bind-key -r C-i run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka-docker"
+bind-key -r C-u run-shell "~/.local/bin/tmux-sessionizer ~/Workspace/Freelancing/shahram/naturallife-plugin"
+# bind-key -r C-i run-shell "~/.local/bin/tmux-sessionizer ~/workspace/quokka-docker"
 
 #====================================== TPM ====================================
 # List of plugins
