Improve desktop experience

--- a/.config/regolith3/picom/config
+++ b/.config/regolith3/picom/config
@@ -13,7 +13,8 @@ shadow = true;
 #################################
 
 inactive-opacity = 0.93;
-active-opacity = 0.93;
+active-opacity = 1;
+#active-opacity = 0.93;
 frame-opacity = 0.93;
 inactive-opacity-override = false;
 
