--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-/nvim/.config/nvim*/undo/
-/nvim/.config/nvim*/swap/
-/nvim/.config/nvim*/backup/
-.zcompdump*
-fonts/in/
-fonts/*.zip
-/zsh/.config/local/share/zsh/zcompdump*
-/z/.config/local/share/z/z
-/fonts/.local/share/fonts/.uuid
 /.config/nvim/neoconf.json
+/.config/zsh/.zcompdump
+/.config/zsh/.zshrc.local
