--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -13,34 +13,48 @@ info_bg = "#000000"
 info_fg = "#458588"
 separator_bg = "$000000"
 separator_fg = "#000000"
-separator = " "
+separator = ""
 end_separator = ""
 
 [icons]
 icons = "awesome6"
 
 [[block]]
+block = "keyboard_layout"
+driver = "sway"
+format = " \uf11c  $layout "
+
+[[block]]
+block = "tea_timer"
+format = " $icon  {$hours:$minutes:$seconds |} "
+done_cmd = "notify-send 'Timer Finished'"
+increment = 60
+
+[[block]]
 block = "net"
-format = "^icon_net_down$speed_down.eng(prefix:K)  ^icon_net_up$speed_up.eng(prefix:K) "
-inactive_format = ""
+format = " ^icon_net_down$speed_down.eng(prefix:K)  ^icon_net_up$speed_up.eng(prefix:K) "
+inactive_format = "  "
 interval = 3 
+
+[[block]]
+block = "cpu"
+interval = 12
+format = " $icon $utilization ($frequency/$max_frequency) "
+format_alt = " $icon $barchart "
+
+[[block]]
+block = "memory"
+format = " $icon $mem_used.eng(p:Mi)/$mem_total.eng(p:Mi) "
+warning_mem = 80
+critical_mem = 95
 
 [[block]]
 block = "disk_space"
 path = "/"
 info_type = "used"
-format = "$icon $path: $used /$available"
+format = " $icon $path: $used/$available "
 warning = 60.0
 alert = 10.0
-
-[[block]]
-block = "memory"
-format = " $icon $mem_used.eng(p:Mi)/$mem_total.eng(p:Mi)"
-warning_mem = 80
-critical_mem = 95
-
-[[block]]
-block = "cpu"
 
 [[block]]
 block = "sound"
@@ -56,20 +70,13 @@ headphones_indicator = true
 step_width = 3
 
 [[block]]
-block = "tea_timer"
-format = " $icon  {$hours:$minutes:$seconds |}"
-# command=~/go/bin/i3-timer -alarm-command="notify-send 'i3-timer' 'Alarm Elapsed!'; play /usr/share/sounds/freedesktop/stereo/alarm-clock-elapsed.oga"
-done_cmd = "notify-send 'Timer Finished'"
-increment = 60
+block = "uptime"
 
 [[block]]
 block = "battery"
 if_command = "test -e /sys/class/power_supply/BAT0"
 
 [[block]]
-block = "uptime"
-
-[[block]]
 block = "time"
 interval = 10
-format = "$timestamp.datetime(f:'%a %d/%m %R') "
+format = " $timestamp.datetime(f:'%a %d.%m %R Uhr') "
