--- a/.config/sway/config
+++ b/.config/sway/config
@@ -136,9 +136,9 @@ bindsym Mod4+Shift+minus move scratchpad
 bindsym Mod4+Shift+f floating toggle
 
 # Media keys
-bindsym XF86AudioLowerVolume exec 'pactl set-sink-volume @DEFAULT_SINK@ -1%'
-bindsym XF86AudioMute exec'pactl set-sink-mute @DEFAULT_SINK@ toggle'
-bindsym XF86AudioRaiseVolume exec 'pactl set-sink-volume @DEFAULT_SINK@ +1%'
+bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%+;
+bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-;
+bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle;
 bindsym XF86MonBrightnessDown exec light -U 5
 bindsym Mod4+Alt+Backspace input "type:keyboard" xkb_switch_layout next  
                         
