Fix brightness up shortcut

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -140,6 +140,7 @@ bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%+;
 bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-;
 bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle;
 bindsym XF86MonBrightnessDown exec light -U 5
+bindsym XF86MonBrightnessUp exec light -A 5
 bindsym Mod4+Alt+Backspace input "type:keyboard" xkb_switch_layout next  
                         
 input "type:keyboard" {  
