--- a/.config/sway/config
+++ b/.config/sway/config
@@ -7,7 +7,7 @@ hide_edge_borders none
 floating_modifier Mod4
 
 focus_wrapping no
-focus_follows_mouse always
+focus_follows_mouse yes
 focus_on_window_activation smart
 
 workspace_layout default
@@ -158,7 +158,7 @@ input "type:touchpad" {
     dwt enabled
     natural_scroll enabled
     pointer_accel 0.5
-    tap enabled
+    tap disabled
 }
 
 mode "resize" {
